--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start:client": "node Client.js"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
     "readline": "^1.3.0",
     "ws": "^8.18.3"
   }
